# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos/cli/ohos_cli_executable.gni")
import("../../batterymgr.gni")

ohos_cli_executable("ohos-batteryManager") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  branch_protector_ret = "pac_ret"

  cli_config_file = "ohos-batteryManager.json"

  sources = [
    "src/cli_handler.cpp",
    "src/main.cpp",
  ]

  include_dirs = [ "${battery_inner_api}/native/include" ]

  deps = [ "${battery_inner_api}:batterysrv_client" ]

  configs = [ "${battery_utils}:coverage_flags" ]

  external_deps = [
    "cJSON:cjson",
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_core",
    "samgr:samgr_proxy",
  ]

  install_enable = true
  install_images = [ "system" ]
  relative_install_dir = "cli_tool/executable"

  part_name = "battery_manager"
  subsystem_name = "powermgr"
}
