# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/powermgr/battery_manager/batterymgr.gni")

config("private_config") {
  include_dirs = [
    "include",
    "../native/include",
  ]
}

config("public_config") {
  include_dirs = [
    "include",
    "../native/include",
    "../../interfaces/inner_api/native/include",
  ]
}

ohos_shared_library("battery_hookmgr") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  branch_protector_ret = "pac_ret"

  sources = [ "src/battery_hookmgr.cpp" ]

  configs = [
    ":private_config",
    "${battery_utils}:coverage_flags",
  ]

  public_configs = [ ":public_config" ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "init:libbegetutil",
  ]

  subsystem_name = "powermgr"
  part_name = "battery_manager"
}
