# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//drivers/hdf_core/adapter/uhdf2/uhdf.gni")

module_output_path = "drivers_peripheral_battery/battery"

##############################################################################
config("module_private_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "include",
    "charger/ui/include",
    "//third_party/libpng",
    "charger/led",
    "charger/backlight",
    "charger/vibrate",
    "charger/include",
    "//drivers/peripheral/battery/interfaces/hdi_service/test/unittest/include",
    "//drivers/peripheral/battery/interfaces/include/",
    "//drivers/peripheral/battery/include/",
    "//drivers/peripheral/battery/interfaces/hdi_service/include",
    "charger/led",
    "//drivers/peripheral/battery/utils/include",
  ]
}

##############################systemtest##########################################
ohos_systemtest("test_charger_overtemperature_shutdown") {
  module_out_path = "${module_output_path}"

  sources = [
    "charger/backlight/battery_backlight.cpp",
    "charger/led/battery_led.cpp",
    "charger/src/charger_thread.cpp",
    "charger/vibrate/battery_vibrate.cpp",
    "//drivers/peripheral/battery/interfaces/hdi_service/src/battery_config.cpp",
    "//drivers/peripheral/battery/interfaces/hdi_service/src/battery_thread.cpp",
    "//drivers/peripheral/battery/interfaces/hdi_service/src/power_supply_provider.cpp",
    "src/charger_overtemperature_shutdown_test.cpp",
  ]

  configs = [ ":module_private_config" ]

  deps = [
    "${hdf_uhdf_path}/utils:libhdf_utils",
    "charger/ui:libminui",
    "//third_party/googletest:gtest_main",
    "//third_party/jsoncpp:jsoncpp",
  ]

  external_deps = [
    "c_utils:utils",
    "drivers_interface_battery:libbattery_proxy_1.1",
    "drivers_interface_input:hdi_input",
    "drivers_interface_light:liblight_proxy_1.0",
    "hiviewdfx_hilog_native:libhilog",
    "init:libbegetutil",
    "ipc:ipc_core",
  ]
}

##############################systemtest##########################################
ohos_systemtest("test_charger_undertemperature_shutdown") {
  module_out_path = "${module_output_path}"

  sources = [
    "charger/backlight/battery_backlight.cpp",
    "charger/led/battery_led.cpp",
    "charger/src/charger_thread.cpp",
    "charger/vibrate/battery_vibrate.cpp",
    "//drivers/peripheral/battery/interfaces/hdi_service/src/battery_config.cpp",
    "//drivers/peripheral/battery/interfaces/hdi_service/src/battery_thread.cpp",
    "//drivers/peripheral/battery/interfaces/hdi_service/src/power_supply_provider.cpp",
    "src/charger_undertemperature_shutdown_test.cpp",
  ]

  configs = [ ":module_private_config" ]

  deps = [
    "${hdf_uhdf_path}/utils:libhdf_utils",
    "charger/ui:libminui",
    "//third_party/googletest:gtest_main",
    "//third_party/jsoncpp:jsoncpp",
  ]

  external_deps = [
    "c_utils:utils",
    "drivers_interface_battery:libbattery_proxy_1.1",
    "drivers_interface_input:hdi_input",
    "drivers_interface_light:liblight_proxy_1.0",
    "hiviewdfx_hilog_native:libhilog",
    "init:libbegetutil",
    "ipc:ipc_core",
  ]
}

##############################systemtest##########################################
ohos_systemtest("test_charger_offline_shutdown") {
  module_out_path = "${module_output_path}"

  sources = [
    "charger/backlight/battery_backlight.cpp",
    "charger/led/battery_led.cpp",
    "charger/src/charger_thread.cpp",
    "charger/vibrate/battery_vibrate.cpp",
    "//drivers/peripheral/battery/interfaces/hdi_service/src/battery_config.cpp",
    "//drivers/peripheral/battery/interfaces/hdi_service/src/battery_thread.cpp",
    "//drivers/peripheral/battery/interfaces/hdi_service/src/power_supply_provider.cpp",
    "src/charger_offline_shutdown_test.cpp",
  ]

  configs = [ ":module_private_config" ]

  deps = [
    "${hdf_uhdf_path}/utils:libhdf_utils",
    "charger/ui:libminui",
    "//third_party/googletest:gtest_main",
    "//third_party/jsoncpp:jsoncpp",
  ]

  external_deps = [
    "c_utils:utils",
    "drivers_interface_battery:libbattery_proxy_1.1",
    "drivers_interface_input:hdi_input",
    "drivers_interface_light:liblight_proxy_1.0",
    "hiviewdfx_hilog_native:libhilog",
    "init:libbegetutil",
    "ipc:ipc_core",
  ]
}

group("systemtest") {
  testonly = true

  deps = [
    ":test_charger_offline_shutdown",
    ":test_charger_overtemperature_shutdown",
    ":test_charger_undertemperature_shutdown",
  ]
}
