# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/powermgr/battery_manager/batterymgr.gni")

ohos_shared_library("batteryinfo") {
  sources = [ "battery_info.cpp" ]
  configs = [ "${battery_utils}:utils_config" ]
  deps = [ "${battery_innerkits}:batterysrv_client" ]
  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "napi:ace_napi",
  ]

  relative_install_dir = "module"

  subsystem_name = "powermgr"
  part_name = "battery_manager"
}

ohos_shared_library("battery") {
  sources = [ "system_battery.cpp" ]
  configs = [ "${battery_utils}:utils_config" ]
  deps = [ "${battery_innerkits}:batterysrv_client" ]
  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "napi:ace_napi",
  ]

  relative_install_dir = "module"

  subsystem_name = "powermgr"
  part_name = "battery_manager"
}
