# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/powermgr/battery_manager/batterymgr.gni")
import("//build/test.gni")
import("//drivers/adapter/uhdf2/uhdf.gni")

module_output_path = "battery_manager_native/batterysrv"

###############################################################################
config("module_private_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "include",
    "//utils/system/safwk/native/include",
    "//third_party/googletest/googletest/include",
    "${battery_manager_path}/hdi/api/include",
    "//third_party/jsoncpp/include",
    "//base/startup/syspara_lite/adapter/native/syspara/include",
    "//base/powermgr/battery_manager/charger/ui/include",
    "//base/powermgr/battery_manager/charger/led",
    "//base/powermgr/battery_manager/charger/vibrate",
    "//base/powermgr/battery_manager/charger/backlight",
    "//drivers/peripheral/input/interfaces/include",
    "//third_party/libpng",
    "//drivers/ability/sbuf/include",
    "//drivers/framework/include",
    "//drivers/framework/include/core",
    "//base/powermgr/battery_manager/hdi/service/include",
    "//base/powermgr/battery_manager/hdi/client/include",
    "//base/powermgr/battery_manager/charger/include",
    "//base/powermgr/battery_manager/services/native/include",
    "//base/powermgr/battery_manager/hdi/service/test/unittest/include",
    "${battery_manager_path}/hdi/api/include",
    "${battery_manager_path}/interfaces/innerkits/native/include",
    "${battery_manager_path}/services/zidl/include",
  ]
}

##############################moduletest##########################################
ohos_unittest("test_module") {
  module_out_path = module_output_path

  sources = [
    "//base/powermgr/battery_manager/charger/src/charger_thread.cpp",
    "//base/powermgr/battery_manager/hdi/client/src/batteryd_client.cpp",
    "//base/powermgr/battery_manager/hdi/service/src/battery_config.cpp",
    "//base/powermgr/battery_manager/hdi/service/src/battery_host_service_stub.cpp",
    "//base/powermgr/battery_manager/hdi/service/src/battery_thread.cpp",
    "//base/powermgr/battery_manager/hdi/service/src/power_supply_provider.cpp",
    "src/module_test.cpp",
  ]

  configs = [
    "${utils_path}:utils_config",
    ":module_private_config",
  ]

  deps = [
    "${battery_manager_path}/interfaces/innerkits:batterysrv_client",
    "${hdf_uhdf_path}/hdi:libhdi",
    "${hdf_uhdf_path}/host:libhdf_host",
    "${hdf_uhdf_path}/host:libhdf_host",
    "${hdf_uhdf_path}/ipc:libhdf_ipc_adapter",
    "${hdf_uhdf_path}/utils:libhdf_utils",
    "//base/powermgr/battery_manager/charger/ui:libminui",
    "//base/powermgr/battery_manager/services:batteryservice",
    "//base/startup/syspara_lite/interfaces/innerkits/native/syspara:syspara",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
    "//third_party/jsoncpp:jsoncpp",
    "//utils/native/base:utils",
    "//utils/native/base:utils",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "aafwk_standard:base",
    "aafwk_standard:want",
    "appexecfwk_standard:appexecfwk_base",
    "appexecfwk_standard:libeventhandler",
    "ces_standard:cesfwk_innerkits",
    "hiviewdfx_hilog_native:libhilog",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr_L2:samgr_proxy",
  ]
}

group("moduletest") {
  testonly = true
  deps = []

  deps += [ ":test_module" ]
}
