# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")

group("unittest") {
  testonly = true
  deps = [
    "unittest:test_battery",
    "unittest:test_battery_proxy_mock_iremoteobject",
    "unittest:test_battery_proxy_mock_messageparcel_write_error",
    "unittest:test_battery_proxy_mock_parcel_read_error",
    "unittest:test_battery_proxy_mock_sendrequest_error",
    "unittest:test_batterywakeup",
  ]
}
